...
    "calendar.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Calendar"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Lịch chu kỳ"
...
    "contraception.pill": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "The pill"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Thuốc tránh thai hằng ngày"
...
    "medical.ttc.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Trying to conceive"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Khi đang mong con"
...
    "mode.pregnant": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Pregnant"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Đang mang thai"
...
    "mode.tracking": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Track cycle"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Theo dõi chu kỳ"
...
    "profile.title": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Profile"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cá nhân"
...
    "tab.kicks": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Kicks"
          }
        },
        "vi": {
          "stringUnit": {
            "state": "translated",
            "value": "Cử động"
...
